--- a/src/componentes/mis_estilos.css
+++ b/src/componentes/mis_estilos.css
@@ -1,4 +1,5 @@
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
 
 * {
   margin: 0;
@@ -400,9 +401,9 @@ a:visited {
 }
 
 .mostrador .fila .item {
-  max-width: 120px;
+  max-width: 150px;
   padding: 5px;
-  height: 390px;
+  height: 250px;
   text-align: center;
   cursor: pointer;
   border-radius: 5px;
@@ -414,16 +415,414 @@ a:visited {
 }
 
 .mostrador .fila .item img {
-  width: 120px;
+  width: 50px;
 }
 
 .mostrador .fila .item .descripcion-articulos {
   color: #573529;
   font-weight: bold;
+  font-size: 18px;
 }
 
 .mostrador .fila .item .precio {
   color: #f74343;
   font-weight: bold;
-  font-size: 26px;
+  font-size: 20px;
+}
+.contenedor-foto {
+  height: 120px;
+  width: 120px;
+}
+/* estilos al footer */
+.container-footer {
+  max-width: auto;
+  margin: 0 auto;
+}
+.footer {
+  display: flex;
+  place-content: center;
+}
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-links {
+  padding: 0 5px;
+}
+
+.footer-links ul li {
+  list-style: none;
+}
+
+.footer-links ul li a {
+  font-size: 18px;
+  color: #573529;
+  font-weight: bold;
+  display: block;
+  transition: all 0.3s ease;
+}
+
+.footer-links ul li a:hover {
+  padding-left: 6px;
+}
+
+.footer-links h4,
+.social-links h4 {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "snap ITC";
+  color: #573529;
+  margin-bottom: 15px;
+  padding-bottom: 3px;
+  border-bottom: 3px solid #573529;
+  display: inline-block;
+}
+.social-links a {
+  display: inline-block;
+  min-height: 20px;
+  width: 40px;
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 20px;
+  color: #573529;
+  transition: all 0.5s ease;
+}
+
+/* Media Queries */
+
+@media only screen and (min-width: 1025px) {
+  /* Ajustes para pantallas grandes */
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  body {
+    min-height: 100vh;
+    background-image: linear-gradient(
+        rgba(255, 255, 243, 0.65),
+        rgba(255, 255, 243, 0.65)
+      ),
+      url("../img/logo veterinaria con nombre.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: contain;
+    background-color: #fffff3;
+  }
+}
+
+/* Media Query para pantallas de 769px a 1024px */
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  /* Ajustes para pantallas medianas */
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* Ajustes adicionales de tamaño de letra */
+  body,
+  #descripcion-articulos,
+  .titulo,
+  .input,
+  .input::placeholder,
+  .input-1,
+  .input-1::placeholder,
+  .input-2,
+  .input-2::placeholder,
+  .label,
+  .label-1,
+  .label-2,
+  .label-check,
+  .label-check1,
+  [type="checkbox"]:checked + label:before,
+  a:link,
+  a:hover,
+  a:visited {
+    font-size: 22px; /* Reducción adicional del tamaño de letra */
+  }
+  .formulario {
+    margin-top: 5px;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+    max-width: 100%;
+    height: auto;
+  }
+  .formulario_spa {
+    grid-column: 2;
+    margin-top: 5px;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+    max-width: 100%;
+    height: auto;
+  }
+  .input {
+    background-color: #8eb540;
+    width: 700px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+    padding: 5px;
+    margin: 5px;
+  }
+  /*para el manejo de los input*/
+  .input-1 {
+    background-color: #8eb540;
+    width: 250px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+  }
+  /*para el manejo de los input*/
+  .input-2 {
+    background-color: #8eb540;
+    width: 300px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+    padding: 5px;
+  }
+  body {
+    min-height: 100vh;
+    background-image: linear-gradient(
+        rgba(255, 255, 243, 0.65),
+        rgba(255, 255, 243, 0.65)
+      ),
+      url("../img/logo veterinaria con nombre.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: contain;
+    background-color: #fffff3;
+  }
+}
+
+/* Media Query para pantallas de 600px a 768px */
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+  /* Ajustes para pantallas medianas */
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /* Ajustes adicionales de tamaño de letra */
+  body,
+  #descripcion-articulos,
+  .titulo,
+  .input,
+  .input::placeholder,
+  .input-1,
+  .input-1::placeholder,
+  .input-2,
+  .input-2::placeholder,
+  .label,
+  .label-1,
+  .label-2,
+  .label-check,
+  .label-check1,
+  [type="checkbox"]:checked + label:before,
+  a:link,
+  a:hover,
+  a:visited {
+    font-size: 20px; /* Reducción adicional del tamaño de letra */
+  }
+  .input {
+    background-color: #8eb540;
+    width: 600px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+    padding: 5px;
+    margin: 5px;
+  }
+  /*para el manejo de los input*/
+  .input-1 {
+    background-color: #8eb540;
+    width: 250px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+  }
+  /*para el manejo de los input*/
+  .input-2 {
+    background-color: #8eb540;
+    width: 300px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+    padding: 5px;
+  }
+  body {
+    min-height: 100vh;
+    background-image: linear-gradient(
+        rgba(255, 255, 243, 0.65),
+        rgba(255, 255, 243, 0.65)
+      ),
+      url("../img/logo veterinaria con nombre.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: contain;
+    background-color: #fffff3;
+  }
+  .ul-menu {
+    display: flex;
+    place-items: left;
+    background-color: #fffff3;
+    margin: auto;
+    width: 250px;
+  }
+  .mostrador {
+    width: 250px;
+    transition: 0.5s ease;
+  }
+  .botones-sistema {
+    margin: auto 5px;
+    margin-bottom: 5px;
+    font-size: 20px;
+  }
+  .botones {
+    display: grid;
+    grid-column: 1fr;
+    width: 250px;
+    margin: auto;
+  }
+  .opciones-menu {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .label-check1 {
+    font-size: 14px;
+  }
+}
+
+/* Media Query para pantallas de 320px a 599px */
+@media only screen and (min-width: 320px) and (max-width: 599px) {
+  /* Ajustes para pantallas pequeñas */
+  .container,
+  .bienvenida,
+  .bienvenida-1,
+  .bienvenida-1-1,
+  .bienvenida_spa {
+    grid-template-columns: 1fr;
+  }
+
+  .fondo {
+    background-color: #fffff3;
+  }
+  body {
+    min-height: 100vh;
+    background-image: linear-gradient(
+        rgba(255, 255, 243, 0.65),
+        rgba(255, 255, 243, 0.65)
+      ),
+      url("../img/logo veterinaria con nombre.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: contain;
+    background-color: #fffff3;
+  }
+  .input {
+    background-color: #8eb540;
+    width: 450px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+    padding: 5px;
+    margin: 5px;
+  }
+  /*para el manejo de los input*/
+  .input-1 {
+    background-color: #8eb540;
+    width: 250px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+  }
+  /*para el manejo de los input*/
+  .input-2 {
+    background-color: #8eb540;
+    width: 300px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 26px;
+    font-weight: bold;
+    padding: 5px;
+  }
+
+  /* Ajustes adicionales de tamaño de letra */
+  body,
+  #descripcion-articulos,
+  .titulo,
+  .input,
+  .input::placeholder,
+  .input-1,
+  .input-1::placeholder,
+  .input-2,
+  .input-2::placeholder,
+  .label,
+  .label-1,
+  .label-2,
+  .label-check,
+  .label-check1,
+  [type="checkbox"]:checked + label:before,
+  a:link,
+  a:hover,
+  a:visited {
+    font-size: 18px; /* Reducción adicional del tamaño de letra */
+  }
+  .footer-row {
+    text-align: center;
+  }
+  .footer-links {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .ul-menu {
+    display: flex;
+    place-items: left;
+    background-color: #fffff3;
+    margin: auto;
+    width: 250px;
+  }
+  .mostrador {
+    width: 250px;
+    transition: 0.5s ease;
+  }
+  .botones-sistema {
+    margin: auto 5px;
+    margin-bottom: 5px;
+    font-size: 20px;
+  }
+  .botones {
+    display: grid;
+    grid-column: 1fr;
+    width: 250px;
+    margin: auto;
+  }
+  .opciones-menu {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(87, 53, 41);
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .label-check1 {
+    font-size: 14px;
+  }
 }
