nuevas actualizaciones en las paginas y el css

--- a/src/componentes/mis_estilos.css
+++ b/src/componentes/mis_estilos.css
@@ -210,18 +210,7 @@
   left: 0;
   list-style-type: none;
 }
-/*para el manejo de los menu
-.menu-oculto1 {
-  display: none;
-  opacity: 0;
-  position: relative;
-  top: calc(100% + 5px);
-  left: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: rgb(87, 53, 41);
-  font-size: 14px;
-  font-weight: bold;
-}*/
+
 /*para el manejo de los menu*/
 .ul-menu > li:hover .menu-oculto {
   opacity: 1;
@@ -277,11 +266,6 @@
   transform: rotate(360deg);
 }
 
-/*para el manejo de los menu
-.ul-menu > li:hover .menu-oculto1 {
-  opacity: 1;
-  display: block;
-}
 /*para el manejo de los menu*/
 .opciones-menu {
   border: none;
@@ -291,20 +275,6 @@
   color: rgb(87, 53, 41);
   font-size: 20px;
   font-weight: bold;
-}
-/*para el manejo de los menu
-.opciones-menu::after {
-  display: inline-block;
-  margin-left: 20px;
-}
-/*para el manejo de los menu
-.opciones-menu.desplegado .flecha {
-  transform: rotate(180deg);
-}
-/*para el manejo de los menu
-.opciones-menu:focus + .menu-oculto1 {
-  display: block;
-  opacity: 1;
 }
 
 /*para el manejo de los botones*/
@@ -355,6 +325,7 @@
 /*para los botones*/
 .botones-sistema {
   margin: 0px 20px;
+  margin-bottom: 10px;
 }
 /*para el manejo de los link*/
 a:link {
@@ -464,8 +435,7 @@ a:visited {
   padding-left: 6px;
 }
 
-.footer-links h4,
-.social-links h4 {
+.footer-links h4 {
   font-size: 20px;
   font-weight: bold;
   font-family: "snap ITC";
@@ -475,13 +445,10 @@ a:visited {
   border-bottom: 3px solid #573529;
   display: inline-block;
 }
-.social-links a {
-  display: inline-block;
-  width: 40px;
-  margin: 0 5px 5px 0;
-  text-align: center;
-  color: #573529;
-  transition: all 0.5s ease;
+
+.social-links {
+  display: block;
+  place-content: center;
 }
 
 /* Media Queries */
@@ -505,19 +472,22 @@ a:visited {
     background-size: contain;
     background-color: #fffff3;
   }
+  .botones-sistema {
+    margin: 0px 20px;
+    margin-bottom: 10px;
+  }
 }
 
 /* Media Query para pantallas de 769px a 1024px */
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   /* Ajustes para pantallas medianas */
-  .container {
-    grid-template-columns: repeat(2, 1fr);
+  .bienvenida {
+    grid-template-columns: 1fr;
   }
 
   /* Ajustes adicionales de tamaño de letra */
   body,
   #descripcion-articulos,
-  .titulo,
   .input,
   .input::placeholder,
   .input-1,
@@ -533,8 +503,16 @@ a:visited {
   a:link,
   a:hover,
   a:visited {
-    font-size: 22px; /* Reducción adicional del tamaño de letra */
+    font-size: 30px;
   }
+  .titulo {
+    font-size: 40;
+  }
+  .botones-sistema {
+    margin: 0px 20px;
+    margin-bottom: 5px;
+  }
+
   .formulario {
     margin-top: 5px;
     margin-bottom: 30px;
@@ -597,14 +575,13 @@ a:visited {
 /* Media Query para pantallas de 600px a 768px */
 @media only screen and (min-width: 600px) and (max-width: 768px) {
   /* Ajustes para pantallas medianas */
-  .container {
-    grid-template-columns: repeat(2, 1fr);
+  .bienvenida {
+    grid-template-columns: 1fr;
   }
 
   /* Ajustes adicionales de tamaño de letra */
   body,
   #descripcion-articulos,
-  .titulo,
   .input,
   .input::placeholder,
   .input-1,
@@ -621,6 +598,13 @@ a:visited {
   a:hover,
   a:visited {
     font-size: 20px; /* Reducción adicional del tamaño de letra */
+  }
+  .titulo {
+    font-size: 40px;
+  }
+  .botones-sistema {
+    margin: 0px 20px;
+    margin-bottom: 5px;
   }
   .input {
     background-color: #8eb540;
@@ -685,6 +669,7 @@ a:visited {
     grid-column: 1fr;
     width: 250px;
     margin: auto;
+    margin-bottom: 5px;
   }
   .opciones-menu {
     border: none;
@@ -701,7 +686,7 @@ a:visited {
 }
 
 /* Media Query para pantallas de 320px a 599px */
-@media only screen and (min-width: 320px) and (max-width: 599px) {
+@media only screen and (min-width: 250px) and (max-width: 599px) {
   /* Ajustes para pantallas pequeñas */
   .container,
   .bienvenida,
@@ -713,6 +698,9 @@ a:visited {
 
   .fondo {
     background-color: #fffff3;
+  }
+  .titulo {
+    font-size: 30px;
   }
   body {
     min-height: 100vh;
@@ -760,7 +748,6 @@ a:visited {
   /* Ajustes adicionales de tamaño de letra */
   body,
   #descripcion-articulos,
-  .titulo,
   .input,
   .input::placeholder,
   .input-1,
@@ -778,13 +765,15 @@ a:visited {
   a:visited {
     font-size: 18px; /* Reducción adicional del tamaño de letra */
   }
-  .footer-row {
+  .footer-row,
+  .social-links {
     text-align: center;
   }
   .footer-links {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 2px;
   }
+
   .ul-menu {
     display: flex;
     place-items: left;
