--- a/src/componentes/mis_estilos.css
+++ b/src/componentes/mis_estilos.css
@@ -10,7 +10,7 @@
 /*para el body y cargando la imagen*/
 .body {
   min-height: 100%;
-  background-image: linear-gradient(rgba(255, 255, 243, 0.65)),
+  background-image: linear-gradient(rgba(255, 255, 243, 0.2)),
     url("../img/logo veterinaria con nombre.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -119,6 +119,20 @@
   font-size: 26px;
   font-weight: bold;
   padding: 5px;
+}
+.parrafos {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 28px;
+  color: rgb(87, 53, 41);
+  font-weight: bold;
+}
+.parrafos2 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 28px;
+  color: #658b19;
+  font-weight: bolder;
 }
 /*para el manejo de los label*/
 .label {
@@ -261,9 +275,10 @@
   background-color: #8eb540;
   content: "\f00c";
   color: #573529;
-  font-family: FontAwesome;
+  font-family: "FontAwesome";
   font-size: 16px;
   transform: rotate(360deg);
+  font-weight: bold;
 }
 
 /*para el manejo de los menu*/
@@ -281,6 +296,10 @@
 .botones {
   display: block;
   text-align: center;
+}
+.privacidad {
+  border: none;
+  background-color: #fffff300;
 }
 /*para el manejo de los link dela pantalla ppal*/
 .links {
