--- a/src/componentes/mis_estilos.css
+++ b/src/componentes/mis_estilos.css
@@ -491,7 +491,7 @@ a:visited {
   position: relative;
   background-color: #fffff3;
   min-width: 250px;
-  max-width: 900px;
+  max-width: 850px;
   min-height: 200px;
   max-height: 800px;
   color: #573529;
@@ -610,7 +610,7 @@ a:visited {
   }
   .input {
     background-color: #8eb540;
-    width: 700px;
+    width: 650px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(87, 53, 41);
     font-size: 26px;
@@ -630,12 +630,56 @@ a:visited {
   /*para el manejo de los input*/
   .input-2 {
     background-color: #8eb540;
-    width: 300px;
+    width: 280px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(87, 53, 41);
     font-size: 26px;
     font-weight: bold;
     padding: 5px;
+  }
+  .modal {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: none;
+    justify-content: center;
+    text-align: center;
+  }
+  .modal.is-open {
+    display: flex;
+  }
+
+  .modal-container {
+    position: relative;
+    background-color: #fffff3;
+    min-width: 400px;
+    max-width: 700px;
+    min-height: 350px;
+    max-height: 450px;
+    color: #573529;
+    font-family: "snap ITC";
+    font-size: 30px;
+    padding: 1rem;
+    margin: auto;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .modal-container h2 {
+    color: #8eb540;
+    font-size: 36px;
+  }
+  .modal-container iframe {
+    width: 450px;
+    height: 250px;
+  }
+  .modal-container img {
+    width: 80px;
+    height: 80px;
   }
 }
 
@@ -643,10 +687,10 @@ a:visited {
 @media only screen and (min-width: 540px) and (max-width: 720px) {
   /* Ajustes para pantallas medianas */
   .bienvenida {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   .container {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   /* Ajustes adicionales de tamaño de letra */
@@ -667,7 +711,7 @@ a:visited {
   a:link,
   a:hover,
   a:visited {
-    font-size: 20px; /* Reducción adicional del tamaño de letra */
+    font-size: 18px; /* Reducción adicional del tamaño de letra */
   }
   .titulo {
     font-size: 40px;
@@ -678,10 +722,10 @@ a:visited {
   }
   .input {
     background-color: #8eb540;
-    width: 600px;
+    width: 410px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(87, 53, 41);
-    font-size: 26px;
+    font-size: 14px;
     font-weight: bold;
     padding: 5px;
     margin: 5px;
@@ -689,21 +733,24 @@ a:visited {
   /*para el manejo de los input*/
   .input-1 {
     background-color: #8eb540;
-    width: 250px;
+    width: 120px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(87, 53, 41);
-    font-size: 26px;
+    font-size: 14px;
     font-weight: bold;
   }
   /*para el manejo de los input*/
   .input-2 {
     background-color: #8eb540;
-    width: 300px;
+    width: 100px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(87, 53, 41);
-    font-size: 26px;
+    font-size: 12px;
     font-weight: bold;
     padding: 5px;
+  }
+  .titulo {
+    font-size: 32px;
   }
   body {
     min-height: 100vh;
@@ -805,6 +852,51 @@ a:visited {
     height: 80px;
     width: 80px;
   }
+  .modal {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: none;
+    justify-content: center;
+    text-align: center;
+  }
+  .modal.is-open {
+    display: flex;
+  }
+
+  .modal-container {
+    position: relative;
+    background-color: #fffff3;
+    min-width: 300px;
+    max-width: 400px;
+    min-height: 100px;
+    max-height: 280px;
+    color: #573529;
+    font-family: "snap ITC";
+    font-size: 20px;
+    padding: 1rem;
+    place-items: center;
+    margin: auto;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .modal-container h2 {
+    color: #8eb540;
+    font-size: 20px;
+  }
+  .modal-container iframe {
+    width: 250px;
+    height: 200px;
+  }
+  .modal-container img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 /* Media Query para pantallas de 320px a 599px */
@@ -823,7 +915,7 @@ a:visited {
     background-color: #fffff3;
   }
   .titulo {
-    font-size: 30px;
+    font-size: 28px;
   }
   body {
     min-height: 100vh;
@@ -977,5 +1069,49 @@ a:visited {
   .contenedor-foto {
     height: 50px;
     width: 50px;
+  }
+  .modal {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: none;
+    justify-content: center;
+    text-align: center;
+  }
+  .modal.is-open {
+    display: flex;
+  }
+
+  .modal-container {
+    position: relative;
+    background-color: #fffff3;
+    min-width: 180px;
+    max-width: 300px;
+    min-height: 100px;
+    max-height: 280px;
+    color: #573529;
+    font-family: "snap ITC";
+    font-size: 18px;
+    padding: 1rem;
+    margin: auto;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .modal-container h2 {
+    color: #8eb540;
+    font-size: 18px;
+  }
+  .modal-container iframe {
+    width: 180px;
+    height: 150px;
+  }
+  .modal-container img {
+    width: 50px;
+    height: 50px;
   }
 }
